# airflow-tutorial

./: .gitignore  Dockerfile  Makefile  docker-compose-db.yaml  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
airflow-infra/: ecr.tf  ecs.tf  github.tf  iam.tf  log.tf  output.tf  provider.tf  storage.tf  variables.tf  vpc.tf
config/: airflow.cfg
dags/: our_first_dag.py
docs/: manual.md
downloads/: test.json
scripts/: initial_data.py
src/: settings.py
src/_types/: configs_types.py
src/configs/: __init__.py  config_paths.py  dataframe_config.yml  loader.py  model_config.yml
src/data/: downloader.py  uploader.py
src/model/: __init__.py  test_conifg.py  utils.py
src/s3/: downloader.py  uploader.py
